[package]
name = "blehr"
version = "0.1.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A library for reading heart rate from BLE heart rate devices."
keywords = ["heartrate", "bluetooth", "ble", "hr", "sensor"]
categories = ["hardware-support"]
repository = "https://github.com/urholaukkarinen/blehr"
homepage = "https://github.com/urholaukkarinen/blehr"

[lib]
name = "blehr"
path = "src/lib.rs"

[dependencies]
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["rt"] }
uuid = "1.6.1"
bleasy = "0.2.2"
log = "0.4.20"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }
