[package]
name = "blehr"
version = "0.1.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A library for reading heart rate from BLE heart rate devices."
keywords = ["heartrate", "bluetooth", "ble", "hr", "sensor"]
categories = ["hardware-support"]
repository = "https://github.com/urholaukkarinen/blehr"
homepage = "https://github.com/urholaukkarinen/blehr"

[lib]
name = "blehr"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["rt"] }
uuid = "1.11.0"
log = "0.4.22"
thiserror = "2.0.3"
btleplug = "0.11.6"

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }
